github link added for configurations

--- a/ConfigurationServer-Microservice/src/main/resources/application.properties
+++ b/ConfigurationServer-Microservice/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.cloud.config.server.git.uri=C:\\Users\\hnail\\Documents\\sts-workspace\\configurations
+spring.cloud.config.server.git.uri=https://github.com/ryokugyu/PMP-Application-Configurations
 server.port=8888
 spring.cloud.config.label=main
 
-spring.application.name=Configuration-Server
+spring.application.name=CONFIGURATION-SERVER
 
